--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -1,7 +1,3 @@
-html {
-  scroll-behavior: smooth;
-}
-
 :root {
   --color-primary: #d73953;
   --color-black: #090909;
@@ -11,8 +7,12 @@ html {
   --text-color: color-black;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body{
-  color: --text-color;
+  color: var(--text-color);
 }
 a {
   color: #161616;
@@ -22,10 +22,10 @@ a {
 }
 
 .card-category {
-  color: --color-primary;
+  color: var(--color-primary);
 }
 
 .section-tagline {
-  color: --color-primary;
+  color: var(--color-primary);
 }
 
