--- a/0x02-CSS_advanced/styles/3-style.css
+++ b/0x02-CSS_advanced/styles/3-style.css
@@ -4,7 +4,7 @@
   --color-white: #ffffff;
   --color-light-grey: #f3f3f3;
   --color-dark-grey: #353535;
-  --text-color: var(color-black);
+  --text-color: var(--color-black);
 }
 
 html {
@@ -28,4 +28,3 @@ a {
 .section-tagline {
   color: var(--color-primary);
 }
-
