--- a/0x02-CSS_advanced/styles/10-style.css
+++ b/0x02-CSS_advanced/styles/10-style.css
@@ -17,6 +17,7 @@
   --line-height-small: 1.2;
   --line-height-base: 1.5;
   --line-height-big: 1.8;
+  --section-header-align: center;
 }
 
 html {
@@ -49,10 +50,9 @@ a {
   color: var(--color-primary);
 }
 
+.section-header {
+  text-align: var(--section-header-align);
+}
 .section-tagline {
   color: var(--color-primary);
 }
-.section-header-align {
-   text-align: center;
-}
-
