--- a/0x02-CSS_advanced/styles/13-style.css
+++ b/0x02-CSS_advanced/styles/13-style.css
@@ -53,7 +53,7 @@ a:hover {
   text-decoration: underline;
 }
 a:active {
-  background: var(--color-dark-grey);
+  background-color: var(--color-light-grey);
 }
 
 
