--- a/0x02-CSS_advanced/styles/16-style.css
+++ b/0x02-CSS_advanced/styles/16-style.css
@@ -8,7 +8,7 @@
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
-html {
+ html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -348,6 +348,7 @@ template {
   display: none;
 }
 
+/* ---------------- End Normalize ---------------- */
 
 :root {
   --color-primary: #d73953;
@@ -356,8 +357,8 @@ template {
   --color-light-grey: #f3f3f3;
   --color-dark-grey: #353535;
   --text-color: var(--color-black);
-  --font-family-base: 'Open Sans','Helvetica Neue', Helvetica, Arial, sans-serif;
-  --font-family-title: Raleway, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  --font-family-base: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  --font-family-title: Raleway, "Helvetica Neue", Helvetica, Arial, sans-serif;
   --font-size-small: 1.2rem;
   --font-size-medium: 1.6rem;
   --font-size-large: 1.8rem;
@@ -369,7 +370,7 @@ template {
   --line-height-base: 1.5;
   --line-height-big: 1.8;
   --section-header-align: center;
-  --section-tagline-transform: uppercase; 
+  --section-tagline-transform: uppercase;
   --section-title-margin: 0;
   --section-title-color: var(--color-black);
 }
@@ -383,7 +384,7 @@ html {
   font-size: 62.5%;
 }
 
-body{
+body {
   color: var(--text-color);
   font-family: var(--font-family-base);
   font-size: var(--font-size-medium);
@@ -404,13 +405,14 @@ a:link {
 a:visited {
   font-style: italic;
 }
+
 a:hover {
   text-decoration: underline;
 }
+
 a:active {
   background-color: var(--color-light-grey);
 }
-
 
 .visually-hidden {
   display: none;
@@ -437,4 +439,10 @@ a:active {
   font-family: var(--font-family-title);
   text-transform: var(--section-tagline-transform);
   font-weight: var(--font-weight-bold);
+}
+
+.container {
+  width: 960px;
+  margin-left: auto;
+  margin-right: auto;
 }
