--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -485,7 +485,7 @@ a:active {
 }
 .nav .nav-item {
   font-family: var(--nav-item-font-family);
-  font-style: var(--nav-item-font-weight);
+  font-weight: var(--nav-item-font-weight);
   font-size: var(--nav-item-font-size);
   letter-spacing: var(--nav-item-letter-spacing);
   display: var(--nav-item-display);
