--- a/0x02-CSS_advanced/styles/18-style.css
+++ b/0x02-CSS_advanced/styles/18-style.css
@@ -480,7 +480,7 @@ a:active {
 .nav {
   margin: 0;
   padding: 0;
-  text-decoration: none;
+  list-style: none;
   text-align: center;
 }
 .nav .nav-item {
