Grid styling and custom variables

--- a/0x02-CSS_advanced/styles/19-style.css
+++ b/0x02-CSS_advanced/styles/19-style.css
@@ -466,7 +466,7 @@ a:active {
   font-family: var(--font-family-title);
   text-transform: var(--section-tagline-transform);
   font-weight: var(--font-weight-bold);
-   margin: var(--section-tagline-margin);
+  margin: var(--section-tagline-margin);
 }
 
 .container {
@@ -511,10 +511,11 @@ ul .row {
   float: left;
   padding: 0.5rem;
 }
-.col-1-2 {
+
+.col-1-2  {
   width: 50%;
   float: left;
-  padding: 0.5rem
+  padding: 0.5rem;
 }
 
 .footer-copyright {
@@ -523,8 +524,6 @@ ul .row {
   color: var(--text-color);
 }
 
-.footer ul{
-  text-align: right;
+.footer ul {
+  text-align: center;
 }
-
-
