--- a/0x02-CSS_advanced/styles/21-style.css
+++ b/0x02-CSS_advanced/styles/21-style.css
@@ -521,11 +521,13 @@ ul.row {
   clear: both;
 }
 
-.col- {
+.col-1-3 {
   width: 33.33%;
-  padding: 0.5rem;
 }
 
+.col-1-2 {
+  width: 50%;
+}
 
 .footer-copyright {
   margin: 0;
@@ -535,4 +537,8 @@ ul.row {
 
 .footer ul {
   text-align: right;
+}
+
+.col- {
+  float: left;
 }
