--- a/0x02-CSS_advanced/styles/25-style.css
+++ b/0x02-CSS_advanced/styles/25-style.css
@@ -390,7 +390,7 @@ template {
   --button-display: inline-block;
   --button-padding: 1.5rem 3rem;
   --button-border: 0.2rem solid var(--color-primary);
-  --button-color: color-black;
+  --button-color: var(--color-black);
   --button-text-decoration: none;
   --button-font-size: var(--font-size-large);
   --button-hover-color: var(--color-white);
