--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -549,7 +549,7 @@ a:active {
   width: 0;
   width: 0.2rem
 }
-.nav .nav-item:hover nav-link {
+.nav .nav-item:hover .nav-link::before {
   background-color: var(--color-primary);
   width: 100%
 }
