--- a/0x02-CSS_advanced/styles/29-style.css
+++ b/0x02-CSS_advanced/styles/29-style.css
@@ -547,7 +547,7 @@ a:active {
   left: 0;
   background-color: var(--color-white);
   width: 0;
-  width: 0.2rem
+  height: 0.2rem
 }
 .nav .nav-item:hover .nav-link::before {
   background-color: var(--color-primary);
