--- a/0x02-CSS_advanced/styles/32-style.css
+++ b/0x02-CSS_advanced/styles/32-style.css
@@ -404,7 +404,6 @@ template {
   --header-logo-link-left: 0;
   --transition-duration: .3s;
   --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
-  --
 }
 
 *, *:before, *:after {
@@ -458,8 +457,9 @@ a:active {
 .button:hover {
   color: var(--button-hover-color);
   text-decoration: var(--button-hover-text-decoration);
-  background: var(--button-hover-background);
-  transition: color var(--transition-duration), background-color var(--transition-duration);
+  background-color: var(--button-hover-background);
+  transition-duration: var(--transition-duration);
+  transition-property: color, background-color;
 }
 
 .visually-hidden {
@@ -537,7 +537,6 @@ a:active {
 .nav .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-
 }
 
 .nav .nav-link:hover {
@@ -545,7 +544,7 @@ a:active {
 }
 
 .nav .nav-link::before {
-  content: " ";
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -554,21 +553,16 @@ a:active {
   height: 0.2rem;
   transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
+
 .nav .nav-item:hover .nav-link::before {
   background-color: var(--color-primary);
-  width: 100%
+  width: 100%;
 }
 
 ul.row {
   margin: 0;
   padding: 0;
   list-style: none;
-}
-
-.row::after {
-  content: " ";
-  display: table;
-  clear: both;
 }
 
 .col-1-3 {
@@ -587,6 +581,12 @@ ul.row {
 
 .footer ul {
   text-align: right;
+}
+
+.row::after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 [class^="col-"] {
@@ -614,7 +614,7 @@ ul.row {
 }
 
 .card-services .card-title {
-   margin: 0;
+  margin: 0;
 }
 
 .card-services a {
@@ -622,6 +622,7 @@ ul.row {
   padding: 2rem;
   background-color: var(--color-light-grey);
 }
+
 .card-services a:hover {
   color: var(--color-white);
   background-color: var(--color-primary);
@@ -631,6 +632,7 @@ ul.row {
 .card-testimonial {
   text-align: center;
 }
+
 .card-testimonial .card-avatar {
   border-radius: 50%;
   width: 10rem;
@@ -639,23 +641,26 @@ ul.row {
 
 .card-testimonial .card-quote cite {
   display: block;
-  padding-top: 1.6rem;
+  padding-top: 1rem;
   color: var(--color-primary);
-} 
+}
 
 .section-hero {
   background-size: 90rem auto;
 }
+
 .section-hero .section-title {
   margin-bottom: 5rem;
 }
+
 .section-hero .section-inner {
- padding: 10rem 40rem 2rem 0;
+  padding: 10rem 40rem 2rem 0;
 }
 
 .header {
   padding: var(--header-padding);
 }
+
 .header-logo {
   position: var(--header-logo-position);
 }
@@ -671,6 +676,7 @@ ul.row {
   position: relative;
   overflow: hidden;
 }
+
 .card-work .card-image img {
   height: 30rem;
   width: 100%;
@@ -684,8 +690,9 @@ ul.row {
   left: -0.1rem;
   right: -0.1rem;
   z-index: 1;
-  transition: var(–transition-duration) var(transition-cubic-bezier);
+  transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
+
 .card-work:hover .card-inner {
   background-color: rgba(0, 0, 0, 0.7);
 }
@@ -705,7 +712,6 @@ ul.row {
 }
 
 .card-work .card-title a::after {
-  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -734,9 +740,9 @@ ul.row {
 
 .card-work:hover .card-image {
   transform: scale(1.2);
-  transition: var(–transition-duration) var(transition-cubic-bezier);
-}
-.card-work:hover .card-outer{
-  transform: scale(0.95);
+  transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
+.card-work:hover .card-outer {
+  transform: scale(0.95);
+}
