--- a/0x03-responsive_design/03-styles.css
+++ b/0x03-responsive_design/03-styles.css
@@ -176,6 +176,11 @@
     clip: rect(1px, 1px, 1px, 1px);
     white-space: nowrap;
   }
+
+main img {
+  width: 100%;
+  height: auto;
+}
   
   /*** 2. LAYOUT ***/
   
@@ -211,6 +216,21 @@
   
   .col-1-2 {
     width: calc((100% / 2) - 2rem);
+  }
+    
+  @media screen and (max-width: 767px) {
+    ul.row, .row {
+      flex-direction: column;
+      margin: 0;
+    }
+
+    [class^="col-"] {
+      margin: 0 0 3rem 0;
+    }
+
+    .col-1-3, .col-1-2 {
+      width: 100%;
+    }
   }
   
   /* Navbar
@@ -261,7 +281,13 @@
     background-color: var(--color-primary);
     width: 100%;
   }
-  
+
+  @media (max-width: 767px) {
+    .navbar-menu {
+        display: none;  
+      }
+  }  
+
   /* Header
       ============================= */
   
@@ -400,6 +426,11 @@
     flex-direction: row-reverse;
   }
   
+  @media () {
+    .section-latest-news .row {
+      flex-direction: column;
+    }
+  }
   /* Section SERVICES
       ============================= */
   
